[gd_scene load_steps=2 format=3 uid="uid://bjtuo8ra5vnkx"]

[ext_resource type="Script" path="res://scenes/launcher.gd" id="1_2rn83"]

[node name="Launcher" type="CanvasLayer"]
layer = 128
script = ExtResource("1_2rn83")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="HBox" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBox" type="VBoxContainer" parent="VBox/HBox"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="UsernameBox" type="VBoxContainer" parent="VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox/VBox/UsernameBox"]
layout_mode = 2
text = "USERNAME"

[node name="LineEdit" type="LineEdit" parent="VBox/HBox/VBox/UsernameBox"]
layout_mode = 2

[node name="PasswordBox" type="VBoxContainer" parent="VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox/VBox/PasswordBox"]
layout_mode = 2
text = "PASSWORD"

[node name="LineEdit" type="LineEdit" parent="VBox/HBox/VBox/PasswordBox"]
layout_mode = 2
secret = true
secret_character = "â¬¤"

[node name="ArchiveBox" type="VBoxContainer" parent="VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox/VBox/ArchiveBox"]
layout_mode = 2
text = "ARCHIVE"

[node name="LineEdit" type="LineEdit" parent="VBox/HBox/VBox/ArchiveBox"]
layout_mode = 2

[node name="UriBox" type="VBoxContainer" parent="VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox/VBox/UriBox"]
layout_mode = 2
text = "URI
"

[node name="LineEdit" type="LineEdit" parent="VBox/HBox/VBox/UriBox"]
layout_mode = 2

[node name="PortBox" type="VBoxContainer" parent="VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox/VBox/PortBox"]
layout_mode = 2
text = "PORT
"

[node name="LineEdit" type="LineEdit" parent="VBox/HBox/VBox/PortBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/HBox/VBox"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBox/HBox/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "HOST"

[node name="JoinButton" type="Button" parent="VBox/HBox/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[connection signal="button_up" from="VBox/HBox/VBox/HBox/HostButton" to="." method="_on_host_button_button_up"]
[connection signal="button_up" from="VBox/HBox/VBox/HBox/JoinButton" to="." method="_on_join_button_button_up"]
